# parallaxis

./: Cargo.toml  GOVERNANCE.md  LICENSE-CODE  LICENSE-DATA  README.md  SPEC.md
bins/parallaxis/: Cargo.toml
bins/parallaxis/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: claim.rs  error.rs  lib.rs  types.rs  verification.rs
crates/extractor/: Cargo.toml
crates/extractor/src/: lib.rs  llm.rs
crates/normalizer/: Cargo.toml
crates/normalizer/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/tagger/: Cargo.toml
crates/tagger/src/: lib.rs
crates/vault/: Cargo.toml
crates/vault/src/: graph.rs  index.rs  lib.rs  query.rs  storage.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: lib.rs
playground/: index.html
tools/vault-import/: Cargo.toml
tools/vault-import/src/: main.rs
