[package]
name = "parallaxis-normalizer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Unit normalization and alias resolution for Parallaxis"

[dependencies]
parallaxis-core = { workspace = true }
thiserror = { workspace = true }
